Bugfix: Background image too low (scrollable)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -52,7 +52,7 @@
   background-size: cover;
 
   position: relative;
-  margin-top: -130px;
+  margin-top: -135px;
   z-index: -1;
 }
 
